mobile responsive table added

--- a/src/components/Shared/Navbar/Navbar.css
+++ b/src/components/Shared/Navbar/Navbar.css
@@ -137,6 +137,7 @@ transition: all 0.2s ease-in;
       
       }
       .navbar {
+        width: 100%;
         color: black;
         height:80px;
          }
