--- a/src/components/Dashboard/OrderList/OrderListCard/OrderListCard.css
+++ b/src/components/Dashboard/OrderList/OrderListCard/OrderListCard.css
@@ -1,4 +1,6 @@
 .order-list-card{
+    margin: 0 auto;
+    width: 350px;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -40,4 +42,16 @@ border: 1px solid teal;
     margin: 10px 0;
     padding-left:32px;
     text-align: left;
+}
+@media(max-width:768px){
+    .order-list-card:hover{
+        transform:none;
+    }
+    .dashboard-area{
+        min-height: 100vh;
+        padding: 0;
+    }
+    .form-container{
+        max-width: 380px;
+    }
 }
