--- a/src/components/Shared/Sidebar/Sidebar.css
+++ b/src/components/Shared/Sidebar/Sidebar.css
@@ -28,8 +28,24 @@
 
 }
 @media (max-width:768px){
-    .sidebar{
-        width: 100%;
-        height: 10vh;
+    .bar{
+        display:grid;
+        justify-content: center;
+        grid-template-columns: repeat(3,100px);
+        grid-auto-rows: 1fr afr;
+      
     }
+    .bar-link{
+        width: 100%;
+        padding: 10px;
+    }
+    .sidebar{
+        height: 110%;
+        width: 100%;
+    }
+
+  .bar-item{
+      padding: 10px;
+     
+  }
 }
