--- a/src/components/Home/Service/PricingCard/PricingCard.css
+++ b/src/components/Home/Service/PricingCard/PricingCard.css
@@ -36,9 +36,8 @@
 }
 .price-div{
     text-align: center;
-    display: grid;
+    display: flex;
     justify-content: center;
-    grid-template-columns: 10px 1fr;
     grid-gap: 10px;
     margin-top: 1rem;
     margin-inline: auto;
