--- a/src/components/Home/Features/FeaturesCard/FeaturesCard.css
+++ b/src/components/Home/Features/FeaturesCard/FeaturesCard.css
@@ -1,9 +1,12 @@
 .features-card{
-    display: grid;
-    grid-template-rows: 80px 40px 60px;
-    grid-gap: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
     text-align: center;
     max-width: 400px;
+    min-width: 300px;
     padding: 30px ;
     transition: all .3s ease-in;
     border-radius: 10px;
