--- a/src/components/Home/Service/PricingCard/PricingCard.css
+++ b/src/components/Home/Service/PricingCard/PricingCard.css
@@ -28,10 +28,11 @@
     width: 10px;
 }
 .pricing-card{
-    width: 350px;
-    padding: 2rem 5px;
-    display: grid;
+    padding: 2rem 20px;
+display: flex;
+flex-direction: column;
     text-align: center;
+    max-width: 400px;
     border: 1px solid #00A7C8;
     border-radius: 10px;
     transform: scale(0.9);
