--- a/src/components/Shared/Footer/Footer.css
+++ b/src/components/Shared/Footer/Footer.css
@@ -22,6 +22,6 @@
 }
 @media(max-width:768px){
     .link-div{
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr ;
     }
 }
