--- a/src/components/Shared/Navbar/Navbar.css
+++ b/src/components/Shared/Navbar/Navbar.css
@@ -4,11 +4,17 @@
    padding:0 30px;
     height:60px;
     background-color:hsl(203, 21%, 15%) ;
-    align-items:center
+    align-items:center;
 }
 .nav-links{
     display:flex;
     
+}
+.user-name{
+  color: tomato;
+  padding: 0px 5px;
+  border-left: 2px solid teal;
+  border-right: 2px solid teal;
 }
 .nav-link-mobile {
     white-space: nowrap;
@@ -73,7 +79,7 @@ transition: all 0.2s ease-in;
 .nav-link-active{
   border-bottom: 5px solid tomato;
 }
-@media(max-width:768px) {
+@media(max-width:900px) {
     .nav-item{
      
         height: 90px;
@@ -98,16 +104,16 @@ transition: all 0.2s ease-in;
       .nav-link,.user-name {
         text-align: center;
         padding: 2rem;
-        width: 100%;
+        width: 50%;
         display: table;
+        margin: 0 auto;
         transition: all .4s ease;
       }
     
       .nav-link:hover {
         background-color: #17a2b8;
         border-radius: 0;
-        width: 50%;
-        margin: 0 auto;
+      
       }
       .menu-icon {
         display: block;
