--- a/src/components/Dashboard/OrderList/OrderList.css
+++ b/src/components/Dashboard/OrderList/OrderList.css
@@ -1,3 +1,8 @@
-.order-list{
-    display: flex;
+.order-list {
+  display: flex;
+}
+.dashboard-area {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
