--- a/src/components/Dashboard/Order/Order.css
+++ b/src/components/Dashboard/Order/Order.css
@@ -1,31 +1,27 @@
-.dashboard-area{
-    padding: 50px;
+.dashboard-area {
+  padding: 50px;
 }
-.order-card{
-    text-align: center;
+.order-card {
+  text-align: center;
 }
-.form-container{
-    max-width: 600px;
-    box-shadow: 0 10px 30px gray;
-border-radius: 10px;
-    margin: 10px auto;
-    padding: 10px;
+.form-container {
+  max-width: 600px;
+  box-shadow: 0 10px 30px gray;
+  border-radius: 10px;
+  padding: 10px;
 }
-form{
-    display: flex;
-    margin: 0 auto;
-    padding: 10px;
-    flex-direction: column;
- 
-    max-width: 600px;
+form {
+  padding: 10px;
+  max-width: 100%;
 }
-input,textarea{
-border: 1px solid teal;
-border-radius: 5px;
-    width: 90%;
-    margin: 10px auto;
-    padding: 10px;
+input,
+textarea {
+  border: 1px solid teal;
+  border-radius: 5px;
+  width: 100%;
+  margin: 10px auto;
+  padding: 10px;
 }
-select{
-    width: 80px;
+select {
+  width: 80px;
 }
