--- a/src/components/Home/AboutUs/AboutUs.css
+++ b/src/components/Home/AboutUs/AboutUs.css
@@ -1,29 +1,32 @@
-.about-container{
-
-    /* display: grid; */
-    margin: 10px 50px ;
-    justify-content: center;
-    align-items: center;
-    grid-gap: 5rem;
-    /* grid-template-columns: repeat(auto-fit,minmax(350px,500px)); */
-    text-align: left;
-    display: flex;
-    flex-wrap: wrap;
+.about-container {
+  margin: 10px 50px;
+  justify-content: space-evenly;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
 }
-.about-container > div{
-    max-width: 500px;
+.about-img {
+  width: 100%;
+  display: block;
 }
-.about-img{
-    width:100%;
+.map-container {
+  width: 1000px;
+  margin: 0 auto;
 }
-.map-container{
-    width: 500px;
+.title_bar {
+  text-align: center;
+  max-width: 500px;
 }
-@media(max-width:768px){
-    .about-container{
-        margin: 3px;
-    }
-    .map-container{
-        width: 300px;
-    }
+.title_bar p {
+  margin-top: 20px;
+}
+@media (max-width: 768px) {
+  .about-container {
+    margin: 3px;
+  }
+  .map-container {
+    width: 100vw;
+    padding: 20px;
+  }
 }
