--- a/src/components/Home/ContactUs/ContactUs.css
+++ b/src/components/Home/ContactUs/ContactUs.css
@@ -1,50 +1,42 @@
-.contact-img img{
-    width: 100%;
-    padding-bottom: 20px;
+.contact-img img {
+  width: 100%;
+  padding-bottom: 20px;
 }
 .contact-img {
-    max-width: 400px;
+  max-width: 400px;
 }
-.contact-container{
-    box-shadow: 0 10px 30px gray;
-    justify-content: center;
-    padding: 10px ;
-    border-radius: 10px;
-    margin: 0 auto;
-    max-width: 900px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit,400px);
+.contact-container {
+  box-shadow: 0 10px 30px gray;
+  justify-content: center;
+  padding: 10px;
+  border-radius: 10px;
+  margin: 0 auto;
+  max-width: 900px;
 }
-.contact-container form{
-    width: 100%;
+.info {
+  display: flex;
+  gap: 20px;
+}
+.contact-container > form > textarea {
+  width: 100%;
+  margin: 0;
+  padding: 10px;
+  width: 100%;
+  height: 150px;
+}
+.contact-container > form {
+  display: flex;
+  flex-direction: column;
 }
 
-.contact-container input , .contact-container textarea{
-width: 100%;
+.contact-container input {
+  width: 100%;
 }
-.contact-container textarea{
-    height: 100%;
+#contactUs {
+  margin: 50px auto;
 }
-#contactUs{
-    margin: 50px auto;
-}
-@media (max-width:900px){
-    /* .contact-img img{
-        width: 90%;
-        padding-bottom: 20px;
-    } */
-    .contact-img {
-        max-width: 70%;
-        margin-inline: auto;
- 
-     }
-    .contact-container{
-        width: 90%;
-    }
-    .contact-container form{
-       max-width: 300px;
-    }
-    .contact-container input , .contact-container textarea{
-    width: 90%;
-    }
+@media (max-width: 900px) {
+  .contact-container {
+    margin: 10px;
+  }
 }
