--- a/src/components/Home/Features/Features.css
+++ b/src/components/Home/Features/Features.css
@@ -1,25 +1,24 @@
-.mini-card-container{
-    /* display: grid;
-    grid-template-columns: repeat(auto-fit,400px); */
-    display: flex;
-    flex-wrap: wrap;
-    gap: 3rem;
-    justify-content: center;
-    margin: 50px auto;
-justify-content: center;
-
+.mini-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+  justify-content: center;
+  margin: 50px auto;
+  justify-content: center;
 }
-.features{
-    padding: 50px;
-
+.features {
+  padding: 50px;
 }
-.section-header{
-    max-width: 600px;
-    margin: 0 auto;
-    margin-bottom: 50px;
-    padding: 30px 0;
-    text-align: center;
+.section-header {
+  max-width: 800px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  padding: 10px 0;
+  text-align: center;
 }
-.section-header h1{
-    margin: 20px auto;
+.section-header h1 {
+  margin: 20px auto;
+}
+.section-header p {
+  font-size: large;
 }
